syntax = "proto3";
package instantbible.engine;

import "data.proto";

message ReverseIndexEntry {
  bytes map_bytes = 1;
  repeated bytes counts_map_data = 2;
  repeated bytes highlights_map_data = 3;
}

message IndexData {
  bytes fst = 1;
  repeated ReverseIndexEntry reverseIndexEntries = 2;
  bytes translationVerses = 3;
  repeated string translationVersesStrings = 4;
  bytes popularity = 5;
}